--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">SpaceLogin</string>
+    <string name="sign_in">Sign In</string>
+    <string name="username">Username</string>
+    <string name="your_username">Your Username</string>
+    <string name="email">Email</string>
+    <string name="your_email">Your Email</string>
+    <string name="password">Password</string>
+    <string name="your_password">********</string>
+    <string name="terms_and_conditions">I agree to the Terms and Conditions</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="have_an_account">Already have an account?</string>
+    <string name="log_in">Log in</string>
+    <string name="remember_me">Remember me?</string>
+    <string name="forgot_password">FORGOT PASSWORD?</string>
+    <string name="dont_have_an_account">Don\'t have an account?</string>
+    <string name="create_account">Create Account</string>
 </resources>
